WhatsApp text hidden on mobile and Reponsive bug fixed in detail car page

--- a/src/components/CarCarousel/styles.css
+++ b/src/components/CarCarousel/styles.css
@@ -1,8 +1,8 @@
 
 .image-gallery-image {
     width: 100%;
-    height: 500px;
-    line-height: 500px;
+    height: auto;
+    line-height: auto;
     text-align: center;
 }
 
